--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,55 @@
 .card {
   display: grid;
   grid-auto-flow: row;
-  grid-row: 1fr 3fr 2fr;
-  width: 300px;
-  border: 1px solid gray;
-  height: 350px;
+  grid-row: repeat(9, 1fr);
+  width: 220px;
+  border: 1px solid grey;
+  height: 100%;
 }
 
-button {
-  position: relative;
+.books, .add {
   align-items: center;
-  left: 40px;
-  top: 60%;
   height: 40px;
   width: 160px;
+  margin: 10px;
 }
 
-body {
+.table {
   display: grid;
-  grid-row: repeat(4, 1fr);
-  grid-column: repeat(4, 1fr);
+  grid-auto-flow: column;
+  grid-column: 1fr 5fr;
+  grid-row: repeat(10, 2fr);
+}
+
+.new-card {
+  border: 1px solid gray;
+  width: 100px;
+  height: 100px;
+  margin: 15px;
+}
+
+.new-cards {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80vw;
+  text-align: center;
+}
+
+.library {
+  width: 120px;
+}
+
+::backdrop {
+  background-image: linear-gradient(
+    45deg,
+    magenta,
+    rebeccapurple,
+    dodgerblue,
+    green
+  );
+  opacity: 0.75;
+}
+
+#favDialog {
+  border: 1px solid gray;
 }
