--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
+html {
+  background-color: black;
+}
+
+
+
 .card {
   display: grid;
   grid-auto-flow: row;
   grid-row: repeat(9, 1fr);
-  width: 220px;
+  width: 180px;
   border: 1px solid grey;
   height: 100%;
 }
@@ -12,6 +18,11 @@
   height: 40px;
   width: 160px;
   margin: 10px;
+  background-color: #FFA07A;
+}
+
+.new-buttonbox {
+  height: 50px;
 }
 
 .table {
@@ -24,9 +35,20 @@
 .new-card {
   border: 1px solid gray;
   width: 150px;
-  height: 150px;
+  height: 170px;
   margin: 15px;
   align-items: center;
+  background-color: #FFA07A;
+}
+
+.remove-button {
+  background-color: #B0C4DE;
+}
+
+.change-read-button {
+  background-color: #B0C4DE;
+  width: 120px;
+  height: 40px;
 }
 
 .new-cards {
@@ -34,7 +56,6 @@
   flex-wrap: wrap;
   width: 70vw;
   text-align: center;
-  
 }
 
 .library {
@@ -44,13 +65,14 @@
 ::backdrop {
   background-image: linear-gradient(
     45deg,
-    red
+    white
   );
   opacity: 0.65;
 }
 
 #favDialog {
   border: 1px solid gray;
+  background-color: #FFA07A;
 }
 
 form {
